tests/golden/compile-pass/generic_function_identity.rua
fn identity<T>(value: T) -> T {
    value
}

fn main() {
    let value = identity(7);
}
