tests/golden/compile-fail/trait_where_unknown_bound.rua
fn inspect<T>(value: T) where T: MissingTrait {}
